[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsumu"
version = "0.1.0"
description = "Anki flashcard automation toolkit - convert notes, code, and knowledge into high-quality Anki flashcards"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Tsumu Contributors"}
]
keywords = ["anki", "flashcards", "spaced-repetition", "learning", "memorization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
anki = "scripts.anki:main"

[tool.setuptools]
packages = ["scripts"]
